--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "socket.io-client-pusher-decoder",
-  "version": "0.2.0",
+  "name": "@abdullah1116/socket.io-client-pusher-decoder",
+  "version": "0.2.1",
   "description": "pusher decoder for socket.io",
   "main": "index.js",
   "scripts": {
+    "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/abdullah1116/socket.io-client-pusher-decoder#readme",
   "devDependencies": {
-    "socket.io-client": "^4.5.2"
+    "socket.io-client": "^4.5.2",
+    "tsc": "^2.0.4",
+    "typescript": "^4.8.4"
   }
 }
