--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "socket.io-client-pusher-decoder",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "pusher decoder for socket.io",
-  "main": "index.js",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
